--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -32,5 +32,10 @@ html {
 body {
   background: color.$white;
   min-height: 300vh;
+  overflow-x: hidden; 
+  width: 100vw;
+}
+main {
+  width: 100vw;
   overflow-x: hidden;
 }
